[gd_scene load_steps=7 format=3 uid="uid://yory4i5rrii2"]

[ext_resource type="Script" uid="uid://c5se664fk8jqq" path="res://Common/Object Viewer/object_viewer.gd" id="1_o3r5r"]
[ext_resource type="Script" uid="uid://tr6w0ikk1pea" path="res://Common/Object Viewer/item_info_gui.gd" id="2_o7dqn"]
[ext_resource type="Script" uid="uid://bfr8xxiuuihhi" path="res://Assets/GUIDesignScripts/resize_to_text.gd" id="3_o7dqn"]

[sub_resource type="Shader" id="Shader_o7dqn"]
code = "shader_type canvas_item;

uniform float lod : hint_range(0.0, 5) = 0.0;
uniform float darken_amount: hint_range(0.0, 1.0) = 0.5; //Testing Use 
uniform sampler2D SCREEN_TEXTURE : hint_screen_texture, filter_linear_mipmap;

void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	// Called for every pixel the material is visible on.
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	COLOR = color;
}

//void light() {
//	// Called for every pixel for every light affecting the CanvasItem.
//	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2cfm7"]
shader = SubResource("Shader_o7dqn")
shader_parameter/lod = 2.8
shader_parameter/darken_amount = 0.18

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o7dqn"]

[node name="ObjectViewerCanvasLayer" type="CanvasLayer"]

[node name="ObjectViewer" type="Control" parent="." node_paths=PackedStringArray("parent")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o3r5r")
parent = NodePath("..")
test_path = "res://Common/InventoryUI/Example Items/Cube.tscn"

[node name="ColorRect" type="ColorRect" parent="ObjectViewer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.223103, 0.223103, 0.223103, 0.717647)

[node name="Blur" type="Panel" parent="ObjectViewer"]
modulate = Color(0.162066, 0.162066, 0.162066, 1)
self_modulate = Color(0.776471, 0.776471, 0.776471, 1)
material = SubResource("ShaderMaterial_2cfm7")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CustomBackground" type="Control" parent="ObjectViewer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="ObjectViewer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="ObjectViewer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Model Holder" type="Node3D" parent="ObjectViewer/SubViewportContainer/SubViewport"]

[node name="Camera3D" type="Camera3D" parent="ObjectViewer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.115, 2.126)

[node name="ItemInfo" type="Control" parent="ObjectViewer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_o7dqn")

[node name="ItemInfoExit" type="ColorRect" parent="ObjectViewer/ItemInfo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.07
anchor_right = 0.1
anchor_bottom = 0.11
grow_horizontal = 2
grow_vertical = 2
color = Color(0.168627, 0.168627, 0.168627, 0.756863)

[node name="Button" type="Button" parent="ObjectViewer/ItemInfo/ItemInfoExit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_o7dqn")
text = "Back"
flat = true

[node name="DescriptionBacker" type="ColorRect" parent="ObjectViewer/ItemInfo" node_paths=PackedStringArray("label")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.07
anchor_right = 0.92
anchor_bottom = 0.07
color = Color(0.154876, 0.154876, 0.154876, 0.643137)
script = ExtResource("3_o7dqn")
label = NodePath("Description")
resize_x = false
padding_bottom = 10.0

[node name="Description" type="RichTextLabel" parent="ObjectViewer/ItemInfo/DescriptionBacker"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.07
anchor_right = 0.97
anchor_bottom = 0.93
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 20
text = "Blah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah BlahBlah Blah Blah"
fit_content = true
scroll_active = false

[node name="ObjectViewerExit" type="ColorRect" parent="ObjectViewer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.07
anchor_right = 0.1
anchor_bottom = 0.11
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
color = Color(0.168627, 0.168627, 0.168627, 0.756863)

[node name="Button" type="Button" parent="ObjectViewer/ObjectViewerExit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_o7dqn")
text = "Back"
flat = true
